--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto artigo 001</p>
+            <h2>Curso HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum enim eius sapiente quibusdam accusamus debitis amet dolorum explicabo officia quos magni, voluptatum perferendis consequuntur aperiam cum voluptate in odit laudantium.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla quis natus magni deserunt, cum odio distinctio fuga fugit nostrum minima suscipit dicta blanditiis illo provident placeat esse ex vel tempora.</p>
         </article>
     </main>
 </body>
